# d3ctf-2023-pwn-d3TrustedHTTPd

./: README.md  exp.py  writeup en-US.md
attachment/: run.sh
src/d3_trusted_core/: Android.mk  CMakeLists.txt  Makefile
src/d3_trusted_core/host/: Makefile  main.c
src/d3_trusted_core/mini_httpd-1.30/: Makefile  Makefile.bak  README  mini_httpd.c  version.h
src/d3_trusted_core/mini_httpd-1.30/contrib/redhat-rpm/: mini_httpd.spec
src/d3_trusted_core/mini_httpd-1.30/scripts/: mini_httpd.sh
src/d3_trusted_core/mini_httpd-1.30/www/: index.html  login.html  manager.html  secfs.html
src/d3_trusted_core/ta/: Android.mk  Makefile  d3_trusted_core.c  sub.mk  user_ta_header_defines.h
src/d3_trusted_core/ta/include/: d3_trusted_core_ta.h
